# LitScope

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  litscope_benchmark.prof  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md
frontend/: Dockerfile  biome.json  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: app.test.tsx  app.tsx  global.css  test-setup.ts  test-utils.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/charts/: author-work-count-chart.test.tsx  author-work-count-chart.tsx  genre-distribution-chart.test.tsx  genre-distribution-chart.tsx  index.ts  plot-chart.test.tsx  plot-chart.tsx  pos-distribution-chart.test.tsx  pos-distribution-chart.tsx  radar-chart.test.tsx  radar-chart.tsx  timeline-chart.test.tsx  timeline-chart.tsx  word-frequency-chart.test.tsx  word-frequency-chart.tsx  zipf-plot.test.tsx  zipf-plot.tsx
frontend/src/components/layout/: header.test.tsx  header.tsx  sidebar.test.tsx  sidebar.tsx
frontend/src/components/ui/: error-boundary.test.tsx  error-boundary.tsx  info-tooltip.test.tsx  info-tooltip.tsx  loading.test.tsx  loading.tsx  section.tsx  stat.tsx
frontend/src/hooks/: use-analysis.test.ts  use-analysis.ts  use-authors.test.ts  use-authors.ts  use-compare.test.ts  use-compare.ts  use-status.test.ts  use-status.ts  use-timeline.test.ts  use-timeline.ts  use-topics.test.ts  use-topics.ts  use-works.test.ts  use-works.ts
frontend/src/lib/: metric-glossary.test.ts  metric-glossary.ts  utils.test.ts
frontend/src/routes/: __root.test.tsx  __root.tsx  authors.test.tsx  authors.tsx  compare.test.tsx  compare.tsx  index.test.tsx  index.tsx  timeline.test.tsx  timeline.tsx  topics.test.tsx  topics.tsx
frontend/src/routes/works/: $workId.test.tsx  $workId.tsx  index.test.tsx  index.tsx
frontend/src/stores/: ui-store.test.ts
src/litscope/: __init__.py  config.py  exceptions.py  logging.py
src/litscope/analysis/: __init__.py  base.py  models.py  orchestrator.py  registry.py
src/litscope/analysis/classical/: __init__.py  lexical_richness.py  readability.py  sentence_length.py  vocabulary_frequency.py  zipf_fitness.py
src/litscope/analysis/syntactic/: __init__.py  pos_distribution.py  pos_transition.py  sentence_openings.py  voice_ratio.py
src/litscope/api/: __init__.py  app.py  dependencies.py
src/litscope/api/routers/: authors.py  compare.py  genres.py  health.py  ingest.py  timeline.py  topics.py  works.py
src/litscope/api/schemas/: analysis.py  common.py  ingest.py  works.py
src/litscope/cli/: __init__.py  benchmark.py  commands.py
src/litscope/ingestion/: __init__.py  epub_parser.py  metadata_extractor.py  pipeline.py  text_normalizer.py
src/litscope/storage/: __init__.py  database.py  models.py
src/litscope/storage/migrations/: 001_initial.sql  002_analysis_tables.sql
tests/: conftest.py
tests/integration/: conftest.py  test_full_pipeline.py
tests/unit/: test_analysis_base.py  test_analysis_models.py  test_api_analysis.py  test_api_app.py  test_api_compare.py  test_api_health.py  test_api_ingest.py  test_api_schemas.py  test_api_stubs.py  test_api_timeline.py  test_api_topics.py  test_api_works.py  test_benchmark.py  test_cli.py  test_config.py  test_database.py  test_epub_parser.py  test_exceptions.py  test_ingestion_pipeline.py  test_lexical_richness.py  test_metadata_extractor.py  test_orchestrator.py  test_pos_distribution.py  test_pos_transition.py  test_readability.py  test_registry.py  test_sentence_length.py  test_sentence_openings.py  test_text_normalizer.py  test_vocabulary_frequency.py  test_voice_ratio.py  test_zipf_fitness.py
