[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litscope"
version = "0.1.0"
description = "Literary text analysis platform for computational literary studies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "duckdb>=1.2",
    "ebooklib>=0.18",
    "numpy>=1.26",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "scipy>=1.14",
    "spacy>=3.8",
    "structlog>=24.4",
    "syllables>=1.1.5",
]

[project.scripts]
litscope = "litscope.cli.commands:cli"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ebooklib.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["litscope.ingestion.epub_parser"]
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["syllables", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["litscope"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
